styles/Toggle.module.css
.togglelight,
.togglelightmobile {
  width: 60px;
  height: 20px;
  border-radius: 25px;
  position: relative;
  transition: all 0.5s ease;
}

.togglelight {
  background-color: #e2e8ec;
  border: 2px solid #07112f;
}

.togglelightmobile {
  border: 2px solid #e2e8ec;
}

.toggledark,
.toggledarkmobile {
  width: 60px;
  height: 20px;
  border: 2px solid #e2e8ec;
  border-radius: 25px;
  position: relative;
  transition: all 0.5s ease;
}

.circlelight,
.circlelightmobile {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  border-radius: 50%;
  position: absolute;
  left: -2px;
  bottom: -6px;
  transform: translateX(0%);
  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
}

.circlelight {
  background-color: #e2e8ec;
  border: 2px solid #07112f;
}

.circlelightmobile {
  background-color: rgb(59, 66, 86);
  border: 2px solid #e2e8ec;
}

.circledark,
.circledarkmobile {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  border: 2px solid #e2e8ec;
  border-radius: 50%;
  position: absolute;
  left: -2px;
  bottom: -6px;
  transform: translateX(120%);
  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
}

.circledark {
  background-color: #07112f;
}

.circledarkmobile {
  background-color: rgb(7, 17, 47);
}

.moon {
  color: #e2e8ec;
  width: 18px;
  height: 18px;
}

.sun,
.sunmobile {
  width: 18px;
  height: 18px;
}

.sun {
  color: #07112f;
}

.sunmobile {
  color: #e2e8ec;
}

.toggledark,
.togglelight,
.toggledarkmobile,
.togglelightmobile {
  margin: 1.5em 0;
}

